# MatrixDemos

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
extra/: gallery.md
matrixdemos/: __init__.py  __main__.py
matrixdemos/scripts/: AnalogClock.py  Animations.py  DigitalClock.py  Scrolling.py  Slideshow.py  SnakeyGame.py  Stars.py  TextSwarm.py  get_file.py  utils.py
