[metadata]
name = MatrixDemos
author = NachoMonkey

url = https://github.com/nachomonkey/MatrixDemos

description = A collection of demos for the Adafruit 32x32 matrix and a Raspberry Pi
long_description = file: README.md
long_description_content_type = text/markdown

license = MIT

classifiers =
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Education
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
packages = 
    matrixdemos
    matrixdemos.scripts

zip_safe = False
install_requires = 
    pillow
    pygame

[options.entry_points]
console_scripts = 
    matrix_digitalclock = matrixdemos.scripts.DigitalClock:main
    matrix_analogclock = matrixdemos.scripts.AnalogClock:main
    matrix_slideshow = matrixdemos.scripts.Slideshow:main
    matrix_snakegame = matrixdemos.scripts.SnakeyGame:main
    matrix_stars = matrixdemos.scripts.Stars:main
    matrix_textswarm = matrixdemos.scripts.TextSwarm:main
    matrix_animations = matrixdemos.scripts.Animations:main
    matrix_scrolling = matrixdemos.scripts.Scrolling:main
